# tesseract_example

./: .gitignore  CMakeLists.txt  README.md  cppan.yml
src/: main.cpp
with_cmake/: CMakeLists.txt  README.md  cppan.yml
with_cmake/src/: main.cpp
with_cppan/: README.md  main.cpp
